@@ -34,13 +34,13 @@ $tpl->define_dynamic('page_message', 'page');
 $theme_color = Config::get('USER_INITIAL_THEME');
 
 $tpl->assign(
-		array(
-			'TR_RESELLER_MAIN_INDEX_PAGE_TITLE' => tr('ispCP - Administrator/Add hosting plan'),
-			'THEME_COLOR_PATH' => "../themes/$theme_color",
-			'THEME_CHARSET' => tr('encoding'),
-			'ISP_LOGO' => get_logo($_SESSION['user_id'])
-			)
-		);
+	array(
+		'TR_RESELLER_MAIN_INDEX_PAGE_TITLE'	=> tr('ispCP - Administrator/Add hosting plan'),
+		'THEME_COLOR_PATH'					=> "../themes/$theme_color",
+		'THEME_CHARSET'						=> tr('encoding'),
+		'ISP_LOGO'							=> get_logo($_SESSION['user_id'])
+	)
+);
 
 /*
  *
@@ -52,34 +52,36 @@ gen_admin_mainmenu($tpl, Config::get('ADMIN_TEMPLATE_PATH') . '/main_menu_hostin
 gen_admin_menu($tpl, Config::get('ADMIN_TEMPLATE_PATH') . '/menu_hosting_plan.tpl');
 
 $tpl->assign(
-		array(
-			'TR_ADD_HOSTING_PLAN' => tr('Add hosting plan'),
-			'TR_HOSTING PLAN PROPS' => tr('Hosting plan properties'),
-			'TR_TEMPLATE_NAME' => tr('Template name'),
-			'TR_MAX_SUBDOMAINS' => tr('Max subdomains<br><i>(-1 disabled, 0 unlimited)</i>'),
-			'TR_MAX_ALIASES' => tr('Max aliases<br><i>(-1 disabled, 0 unlimited)</i>'),
-			'TR_MAX_MAILACCOUNTS' => tr('Mail accounts limit<br><i>(-1 disabled, 0 unlimited)</i>'),
-			'TR_MAX_FTP' => tr('FTP accounts limit<br><i>(-1 disabled, 0 unlimited)</i>'),
-			'TR_MAX_SQL' => tr('SQL databases limit<br><i>(-1 disabled, 0 unlimited)</i>'),
-			'TR_MAX_SQL_USERS' => tr('SQL users limit<br><i>(-1 disabled, 0 unlimited)</i>'),
-			'TR_MAX_TRAFFIC' => tr('Traffic limit [MB]<br><i>(0 unlimited)</i>'),
-			'TR_DISK_LIMIT' => tr('Disk limit [MB]<br><i>(0 unlimited)</i>'),
-			'TR_PHP' => tr('PHP'),
-			'TR_CGI' => tr('CGI / Perl'),
-			'TR_BACKUP_RESTORE' => tr('Backup and restore'),
-			'TR_APACHE_LOGS' => tr('Apache logfiles'),
-			'TR_AWSTATS' => tr('AwStats'),
-			'TR_YES' => tr('yes'),
-			'TR_NO' => tr('no'),
-			'TR_BILLING_PROPS' => tr('Billing Settings'),
-			'TR_PRICE' => tr('Price'),
-			'TR_SETUP_FEE' => tr('Setup fee'),
-			'TR_VALUE' => tr('Currency'),
-			'TR_PAYMENT' => tr('Payment period'),
-			'TR_STATUS' => tr('Available for purchasing'),
-			'TR_TEMPLATE_DESCRIPTON' => tr('Description'),
-			'TR_EXAMPLE' => tr('(e.g. EUR)'),
-			'TR_ADD_PLAN' => tr('Add plan')));
+	array(
+		'TR_ADD_HOSTING_PLAN'		=> tr('Add hosting plan'),
+		'TR_HOSTING PLAN PROPS'		=> tr('Hosting plan properties'),
+		'TR_TEMPLATE_NAME'			=> tr('Template name'),
+		'TR_MAX_SUBDOMAINS'			=> tr('Max subdomains<br><i>(-1 disabled, 0 unlimited)</i>'),
+		'TR_MAX_ALIASES'			=> tr('Max aliases<br><i>(-1 disabled, 0 unlimited)</i>'),
+		'TR_MAX_MAILACCOUNTS'		=> tr('Mail accounts limit<br><i>(-1 disabled, 0 unlimited)</i>'),
+		'TR_MAX_FTP'				=> tr('FTP accounts limit<br><i>(-1 disabled, 0 unlimited)</i>'),
+		'TR_MAX_SQL'				=> tr('SQL databases limit<br><i>(-1 disabled, 0 unlimited)</i>'),
+		'TR_MAX_SQL_USERS'			=> tr('SQL users limit<br><i>(-1 disabled, 0 unlimited)</i>'),
+		'TR_MAX_TRAFFIC'			=> tr('Traffic limit [MB]<br><i>(0 unlimited)</i>'),
+		'TR_DISK_LIMIT'				=> tr('Disk limit [MB]<br><i>(0 unlimited)</i>'),
+		'TR_PHP'					=> tr('PHP'),
+		'TR_CGI'					=> tr('CGI / Perl'),
+		'TR_BACKUP_RESTORE'			=> tr('Backup and restore'),
+		'TR_APACHE_LOGS'			=> tr('Apache logfiles'),
+		'TR_AWSTATS'				=> tr('AwStats'),
+		'TR_YES'					=> tr('yes'),
+		'TR_NO'						=> tr('no'),
+		'TR_BILLING_PROPS'			=> tr('Billing Settings'),
+		'TR_PRICE'					=> tr('Price'),
+		'TR_SETUP_FEE'				=> tr('Setup fee'),
+		'TR_VALUE'					=> tr('Currency'),
+		'TR_PAYMENT'				=> tr('Payment period'),
+		'TR_STATUS'					=> tr('Available for purchasing'),
+		'TR_TEMPLATE_DESCRIPTON'	=> tr('Description'),
+		'TR_EXAMPLE'				=> tr('(e.g. EUR)'),
+		'TR_ADD_PLAN'				=> tr('Add plan')
+	)
+);
 
 if (isset($_POST['uaction']) && ('add_plan' === $_POST['uaction'])) {
 	// Process data
@@ -103,25 +105,32 @@ if (Config::get('DUMP_GUI_DEBUG')) dump_gui_debug();
 // Generate empty form
 function gen_empty_ahp_page(&$tpl) {
 	$tpl->assign(
-			array(
-				'HP_NAME_VALUE' => '',
-				'TR_MAX_SUB_LIMITS' => '',
-				'TR_MAX_ALS_VALUES' => '',
-				'HP_MAIL_VALUE' => '',
-				'HP_FTP_VALUE' => '',
-				'HP_SQL_DB_VALUE' => '',
-				'HP_SQL_USER_VALUE' => '',
-				'HP_TRAFF_VALUE' => '',
-				'HP_PRICE' => '',
-				'HP_SETUPFEE' => '',
-				'HP_VELUE' => '',
-				'HP_PAYMENT' => '',
-				'HP_DESCRIPTION_VALUE' => '',
-				'TR_STATUS_NO' => 'checked',
-				'HP_DISK_VALUE' => ''));
-
+		array(
+			'HP_NAME_VALUE'			=> '',
+			'TR_MAX_SUB_LIMITS'		=> '',
+			'TR_MAX_ALS_VALUES'		=> '',
+			'HP_MAIL_VALUE'			=> '',
+			'HP_FTP_VALUE'			=> '',
+			'HP_SQL_DB_VALUE'		=> '',
+			'HP_SQL_USER_VALUE'		=> '',
+			'HP_TRAFF_VALUE'		=> '',
+			'HP_PRICE'				=> '',
+			'HP_SETUPFEE'			=> '',
+			'HP_VELUE'				=> '',
+			'HP_PAYMENT'			=> '',
+			'HP_DESCRIPTION_VALUE'	=> '',
+			'TR_STATUS_YES'			=> '',
+			'TR_STATUS_NO'			=> 'checked="checked"',
+			'HP_DISK_VALUE'			=> '',
+			'TR_PHP_YES'			=> '',
+			'TR_PHP_NO'				=> 'checked="checked"',
+			'TR_CGI_YES'			=> '',
+			'TR_CGI_NO'				=> 'checked="checked"'
+		)
+	);
 	$tpl->assign('MESSAGE', '');
 } // End of gen_empty_hp_page()
+
 // Show last entered data for new hp
 function gen_data_ahp_page(&$tpl) {
 	global $hp_name, $description, $hp_php, $hp_cgi;
@@ -131,37 +140,32 @@ function gen_data_ahp_page(&$tpl) {
 	global $price, $setup_fee, $value, $payment, $status;
 
 	$tpl->assign(
-			array(
-				'HP_NAME_VALUE' => $hp_name,
-				'TR_MAX_SUB_LIMITS' => $hp_sub,
-				'TR_MAX_ALS_VALUES' => $hp_als,
-				'HP_MAIL_VALUE' => $hp_mail,
-				'HP_FTP_VALUE' => $hp_ftp,
-				'HP_SQL_DB_VALUE' => $hp_sql_db,
-				'HP_SQL_USER_VALUE' => $hp_sql_user,
-				'HP_TRAFF_VALUE' => $hp_traff,
-				'HP_DISK_VALUE' => $hp_disk,
-				'HP_DESCRIPTION_VALUE' => $description,
-				'HP_PRICE' => $price,
-				'HP_SETUPFEE' => $setup_fee,
-				'HP_VELUE' => $value,
-				'HP_PAYMENT' => $payment));
+		array(
+			'HP_NAME_VALUE'			=> $hp_name,
+			'TR_MAX_SUB_LIMITS'		=> $hp_sub,
+			'TR_MAX_ALS_VALUES'		=> $hp_als,
+			'HP_MAIL_VALUE'			=> $hp_mail,
+			'HP_FTP_VALUE'			=> $hp_ftp,
+			'HP_SQL_DB_VALUE'		=> $hp_sql_db,
+			'HP_SQL_USER_VALUE'		=> $hp_sql_user,
+			'HP_TRAFF_VALUE'		=> $hp_traff,
+			'HP_DISK_VALUE'			=> $hp_disk,
+			'HP_DESCRIPTION_VALUE'	=> $description,
+			'HP_PRICE'				=> $price,
+			'HP_SETUPFEE'			=> $setup_fee,
+			'HP_VELUE'				=> $value,
+			'HP_PAYMENT'			=> $payment
+		)
+	);
 
-	if ('_yes_' === $hp_php) {
-		$tpl->assign(array('TR_PHP_YES' => 'checked'));
-	} else {
-		$tpl->assign(array('TR_PHP_NO' => 'checked'));
-	}
-	if ('_yes_' === $hp_cgi) {
-		$tpl->assign(
-			array('TR_CGI_YES' => 'checked'));
-	} else {
-		$tpl->assign(array('TR_CGI_NO' => 'checked'));
-	}
-	if ($status == 1) {
-		$tpl->assign(array('TR_STATUS_YES' => 'checked'));
-	} else
-		$tpl->assign(array('TR_STATUS_NO' => 'checked'));
+	$tpl->assign(array('TR_PHP_YES'		=> ($hp_php === '_yes_') ? 'checked="checked"' : ''));
+	$tpl->assign(array('TR_PHP_NO'		=> ($hp_php === '_yes_') ? '' : 'checked="checked"'));
+
+	$tpl->assign(array('TR_CGI_YES'		=> ($hp_cgi === '_yes_') ? 'checked="checked"' : ''));
+	$tpl->assign(array('TR_CGI_NO'		=> ($hp_cgi === '_yes_') ? '' : 'checked="checked"'));
+
+	$tpl->assign(array('TR_STATUS_YES'	=> ($status === '_yes_') ? 'checked="checked"' : ''));
+	$tpl->assign(array('TR_STATUS_NO'	=> ($status === '_yes_') ? '' : 'checked="checked"'));
 } // End of gen_data_ahp_page()
 
 // Check correction of input data
@@ -174,31 +178,21 @@ function check_data_correction(&$tpl) {
 
 	$ahp_error = "_off_";
 
-	$hp_name = clean_input($_POST['hp_name']);
-	$hp_sub = clean_input($_POST['hp_sub']);
-	$hp_als = clean_input($_POST['hp_als']);
-	$hp_mail = clean_input($_POST['hp_mail']);
-	$hp_ftp = clean_input($_POST['hp_ftp']);
-	$hp_sql_db = clean_input($_POST['hp_sql_db']);
-	$hp_sql_user = clean_input($_POST['hp_sql_user']);
-	$hp_traff = clean_input($_POST['hp_traff']);
-	$hp_disk = clean_input($_POST['hp_disk']);
-	$description = clean_input($_POST['hp_description']);
-
-	if (empty($_POST['hp_price'])) {
-		$price = 0;
-	} else {
-		$price = clean_input($_POST['hp_price']);
-	}
-	if (empty($_POST['hp_setupfee'])) {
-		$setup_fee = 0;
-	} else {
-		$setup_fee = clean_input($_POST['hp_setupfee']);
-	}
-
-	$value = clean_input($_POST['hp_value']);
-	$payment = clean_input($_POST['hp_payment']);
-	$status = $_POST['status'];
+	$hp_name		= clean_input($_POST['hp_name']);
+	$hp_sub			= clean_input($_POST['hp_sub']);
+	$hp_als			= clean_input($_POST['hp_als']);
+	$hp_mail		= clean_input($_POST['hp_mail']);
+	$hp_ftp			= clean_input($_POST['hp_ftp']);
+	$hp_sql_db		= clean_input($_POST['hp_sql_db']);
+	$hp_sql_user	= clean_input($_POST['hp_sql_user']);
+	$hp_traff		= clean_input($_POST['hp_traff']);
+	$hp_disk		= clean_input($_POST['hp_disk']);
+	$description	= clean_input($_POST['hp_description']);
+	$price			= empty($_POST['hp_price']) ? 0 : clean_input($_POST['hp_price']);
+	$setup_fee		= empty($_POST['hp_setupfee']) ? 0 : clean_input($_POST['hp_setupfee']);
+	$value			= clean_input($_POST['hp_value']);
+	$payment		= clean_input($_POST['hp_payment']);
+	$status			= $_POST['status'];
 
 	if (isset($_POST['php']))
 		$hp_php = $_POST['php'];
@@ -258,21 +252,21 @@ function save_data_to_db(&$tpl, $admin_id) {
 	global $hp_traff, $hp_disk;
 	global $price, $setup_fee, $value, $payment, $status;
 
-	$query = "select id from hosting_plans where name = ? and reseller_id = ?";
-	$query = <<<SQL_QUERY
-        select
-            t1.id, t1.name, t1.reseller_id, t1.name, t1.props, t1.status,
+	$query = "SELECT id FROM hosting_plans WHERE name = ? AND reseller_id = ?";
+	$query = "
+		SELECT
+			t1.id, t1.name, t1.reseller_id, t1.name, t1.props, t1.status,
 			t2.admin_id, t2.admin_type
-        from
-            hosting_plans as t1,
+		FROM
+			hosting_plans as t1,
 			admin as t2
-        where
-            t2.admin_type=?
-		and
+		WHERE
+			t2.admin_type=?
+		AND
 			t1.reseller_id = t2.admin_id
-		and
+		AND
 			t1.name=?
-SQL_QUERY;
+	";
 	// $rs = exec_query($sql, $query, array());
 	$res = exec_query($sql, $query, array('admin', $hp_name));
 
@@ -281,19 +275,20 @@ SQL_QUERY;
 		// $tpl->parse('AHP_MESSAGE', 'ahp_message');
 	} else {
 		$hp_props = "$hp_php;$hp_cgi;$hp_sub;$hp_als;$hp_mail;$hp_ftp;$hp_sql_db;$hp_sql_user;$hp_traff;$hp_disk;";
-		$query = <<<SQL_QUERY
-        insert into
-            hosting_plans(reseller_id,
-							name,
-							description,
-							props,
-							price,
-							setup_fee,
-							value,
-							payment,
-							status)
-        values (?, ?, ?, ?, ?, ?, ?, ?, ?)
-SQL_QUERY;
+		$query = "
+			INSERT INTO
+				hosting_plans(
+								reseller_id,
+								name,
+								description,
+								props,
+								price,
+								setup_fee,
+								value,
+								payment,
+								status)
+			VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)
+		";
 		$res = exec_query($sql, $query, array($admin_id, $hp_name, $description, $hp_props, $price, $setup_fee, $value, $payment, $status));
 
 		$_SESSION['hp_added'] = '_yes_';
