@@ -33,13 +33,13 @@ $tpl->define_dynamic('personalize', 'page');
 $theme_color = Config::get('USER_INITIAL_THEME');
 
 $tpl->assign(
-		array(
-			'TR_CLIENT_CHANGE_PERSONAL_DATA_PAGE_TITLE' => tr('ispCP - Users/Add user'),
-			'THEME_COLOR_PATH' => "../themes/$theme_color",
-			'THEME_CHARSET' => tr('encoding'),
-			'ISP_LOGO' => get_logo($_SESSION['user_id']),
-		)
-	);
+	array(
+		'TR_CLIENT_CHANGE_PERSONAL_DATA_PAGE_TITLE'	=> tr('ispCP - Users/Add user'),
+		'THEME_COLOR_PATH'							=> "../themes/$theme_color",
+		'THEME_CHARSET'								=> tr('encoding'),
+		'ISP_LOGO'									=> get_logo($_SESSION['user_id']),
+	)
+);
 
 /*
  *
@@ -53,20 +53,18 @@ gen_reseller_menu($tpl, Config::get('RESELLER_TEMPLATE_PATH') . '/menu_users_man
 gen_logged_from($tpl);
 
 $tpl->assign(
-		array(
-			'TR_ADD_USER' => tr('Add user'),
-			'TR_CORE_DATA' => tr('Core data'),
-			'TR_DOMAIN_NAME' => tr('Domain name'),
-			'TR_CHOOSE_HOSTING_PLAN' => tr('Choose hosting plan'),
-			'TR_PERSONALIZE_TEMPLATE' => tr('Personalise template'),
-			'TR_YES' => tr('yes'),
-			'TR_NO' => tr('no'),
-			'TR_NEXT_STEP' => tr('Next step'),
-			'TR_DMN_HELP' => tr("You do not need 'www.' ispCP will add it on its own.")
-			)
-	);
-
-get_hp_data_list($tpl, $_SESSION['user_id']);
+	array(
+		'TR_ADD_USER'				=> tr('Add user'),
+		'TR_CORE_DATA'				=> tr('Core data'),
+		'TR_DOMAIN_NAME'			=> tr('Domain name'),
+		'TR_CHOOSE_HOSTING_PLAN'	=> tr('Choose hosting plan'),
+		'TR_PERSONALIZE_TEMPLATE'	=> tr('Personalise template'),
+		'TR_YES'					=> tr('yes'),
+		'TR_NO'						=> tr('no'),
+		'TR_NEXT_STEP'				=> tr('Next step'),
+		'TR_DMN_HELP'				=> tr("You do not need 'www.' ispCP will add it on its own.")
+	)
+);
 
 if (isset($_POST['uaction'])) {
 	if (!check_user_data())
@@ -74,6 +72,8 @@ if (isset($_POST['uaction'])) {
 } else {
 	get_empty_au1_page($tpl);
 }
+
+get_hp_data_list($tpl, $_SESSION['user_id']);
 
 gen_page_message($tpl);
 
@@ -124,10 +124,10 @@ function check_user_data() {
 	}
 	else if ($dmn_pt == '_yes_' || !isset($_POST['dmn_tpl'])) {
 		// send through the session the data
-		$_SESSION['dmn_name'] = $dmn_name;
-		$_SESSION['dmn_tpl'] = $dmn_chp;
-		$_SESSION['chtpl'] = $dmn_pt;
-		$_SESSION['step_one'] = "_yes_";
+		$_SESSION['dmn_name']	= $dmn_name;
+		$_SESSION['dmn_tpl']	= $dmn_chp;
+		$_SESSION['chtpl']		= $dmn_pt;
+		$_SESSION['step_one']	= "_yes_";
 
 		header("Location: user_add2.php");
 		die();
@@ -135,15 +135,14 @@ function check_user_data() {
 		// check if reseller timits are not touched
 		if (reseller_limits_check($sql, $ehp_error, $_SESSION['user_id'], $dmn_chp)) {
 			// send through the session the data
-			$_SESSION['dmn_name'] = $dmn_name;
-			$_SESSION['dmn_tpl'] = $dmn_chp;
-			$_SESSION['chtpl'] = $dmn_pt;
-			$_SESSION['step_one'] = "_yes_";
+			$_SESSION['dmn_name']	= $dmn_name;
+			$_SESSION['dmn_tpl']	= $dmn_chp;
+			$_SESSION['chtpl']		= $dmn_pt;
+			$_SESSION['step_one']	= "_yes_";
 
 			header("Location: user_add3.php");
 			die();
-		}
-		else {
+		} else {
 			set_page_message(tr("Hosting plan values exceed reseller maximum values!"));
 			return false;
 		}
@@ -153,15 +152,12 @@ function check_user_data() {
 // Show empty page
 function get_empty_au1_page(&$tpl) {
 	$tpl->assign(
-		array('DMN_NAME_VALUE' => '',
-			'CH1' => 'selected="selected"',
-			'CH2' => '',
-			'CH3' => '',
-			'CH4' => '',
-			'CHTPL1_VAL' => '',
-			'CHTPL2_VAL' => 'checked="checked"'
-			)
-		);
+		array(
+			'DMN_NAME_VALUE'	=> '',
+			'CHTPL1_VAL'		=> '',
+			'CHTPL2_VAL'		=> 'checked="checked"'
+		)
+	);
 	$tpl->assign('MESSAGE', '');
 } //End of get_empty_au1_page()
 
@@ -172,51 +168,41 @@ function get_data_au1_page(&$tpl) {
 	global $dmn_pt; // personal template
 
 	$tpl->assign(
-		array('DMN_NAME_VALUE' => $dmn_name,
-			'CH' . $dmn_chp => 'selected="selected"',
-			'CHTPL1_VAL' => '',
-			'CHTPL2_VAL' => ''
-			)
-		);
-
-	if ("_yes_" === $dmn_pt)
-		$tpl->assign(
-			array('CHTPL1_VAL' => 'checked="checked"'
-				)
-			);
-	else
-		$tpl->assign(
-			array('CHTPL2_VAL' => 'checked="checked"'
-				)
-			);
+		array(
+			'DMN_NAME_VALUE'	=> $dmn_name,
+			'CHTPL1_VAL'		=> $dmn_pt === "_yes_" ? 'checked="checked"' : '',
+			'CHTPL2_VAL'		=> $dmn_pt === "_yes_" ? '' : 'checked="checked"'
+		)
+	);
 } //End of get_data_au1_page()
 
 // Get list with hosting plan for selection
 function get_hp_data_list(&$tpl, $reseller_id) {
 	$sql = Database::getInstance();
+	global $dmn_chp;
 
 	if (Config::exists('HOSTING_PLANS_LEVEL') && Config::get('HOSTING_PLANS_LEVEL') === 'admin') {
-		$query = <<<SQL_QUERY
-        SELECT
-			t1.id,
-			t1.reseller_id,
-			t1.name,
-			t1.props,
-			t1.status,
-			t2.admin_id,
-			t2.admin_type
-        FROM
-            hosting_plans AS t1,
-			admin AS t2
-        WHERE
-            t2.admin_type = ?
-		  AND
-			t1.reseller_id = t2.admin_id
-		  AND
-			t1.status = 1
-        ORDER BY
-            t1.name
-SQL_QUERY;
+		$query = "
+			SELECT
+				t1.`id`,
+				t1.`reseller_id`,
+				t1.`name`,
+				t1.`props`,
+				t1.`status`,
+				t2.`admin_id`,
+				t2.`admin_type`
+			FROM
+				`hosting_plans` AS t1,
+				`admin` AS t2
+			WHERE
+				t2.`admin_type` = ?
+			AND
+				t1.`reseller_id` = t2.`admin_id`
+			AND
+				t1.`status` = 1
+			ORDER BY
+				t1.`name`
+		";
 		$rs = exec_query($sql, $query, array('admin'));
 		$tpl->assign('PERSONALIZE', '');
 
@@ -226,34 +212,32 @@ SQL_QUERY;
 			$tpl->assign('ADD_FORM', '');
 		}
 	} else {
-		$query = <<<SQL_QUERY
-		SELECT
-			id,
-			name,
-			props,
-			status
-        FROM
-            hosting_plans
-        WHERE
-            reseller_id = ?
-        ORDER BY
-            name
-SQL_QUERY;
+		$query = "
+			SELECT
+				`id`,
+				`name`,
+				`props`,
+				`status`
+			FROM
+				`hosting_plans`
+			WHERE
+				`reseller_id` = ?
+			ORDER BY
+				`name`
+		";
 		$rs = exec_query($sql, $query, array($reseller_id));
 	}
 
-	/*
-	$query = "SELECT name, id FROM hosting_plans WHERE reseller_id=?;";
-
-	$res = exec_query($sql, $query, array($reseller_id));
-	*/
 	if (0 !== $rs->RowCount()) { // There are data
 		while (($data = $rs->FetchRow())) {
+			$dmn_chp = isset($dmn_chp) ? $dmn_chp : $data['id'];
 			$tpl->assign(
-				array('HP_NAME' => $data['name'],
-					'CHN' => $data['id']
-					)
-				);
+				array(
+					'HP_NAME'			=> $data['name'],
+					'CHN'				=> $data['id'],
+					'CH'.$data['id']	=> $data['id']==$dmn_chp?'selected="selected"':''
+				)
+			);
 			$tpl->parse('HP_ENTRY', '.hp_entry');
 		}
 	} else {
